syntax = "proto3";

package mondoo.resources;
option go_package = "go.mondoo.com/cnquery/resources";

// BASIC DATATYPES

message Schema {
  map<string, ResourceInfo> resources = 3;
}

message ResourceID {
  string id = 1;
  string name = 2;
}

message TypedArg {
  string name = 1;
  string type = 2;
  bool optional = 3;
}

message Init {
  repeated TypedArg args = 1;
}

message ResourceInfo {
  string id = 1;
  string name = 2;
  map<string, Field> fields = 3;
  Init init = 20;
  string list_type = 21;
  string title = 22;
  string desc = 23;
  bool private = 24;
  string min_mondoo_version = 25;
  string defaults = 26;
}

message Field {
  string name = 1;
  string type = 2;
  bool is_mandatory = 3;
  repeated string refs = 4;
  string title = 20;
  string desc = 21;
  bool is_private = 22;
  string min_mondoo_version = 23;
  bool is_implicit_resource = 24;
  bool is_embedded = 25;
}
